# Portfolio

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: code-quality.yml
.railway/: portfolio.toml
portfolio/: dump.pgsql  manage.py
portfolio/locale/pl/LC_MESSAGES/: django.po
portfolio/portfolio/: asgi.py  settings.py  urls.py  wsgi.py
portfolio/portfolio/tests/: factories.py
portfolio/portfolio/tests/unit_tests/: test_docs.py  test_healtcheck.py
portfolio/university/: admin.py  apps.py  choices.py  models.py  urls.py
portfolio/university/api/: serializers.py  views.py
portfolio/university/migrations/: 0001_initial.py  0002_publication_alter_schooltranslation_advisor_and_more.py  0003_testimonial_testimonialtranslation.py  0004_remove_publication_title_and_more.py  0005_schooltranslation_degree.py  0006_remove_schooltranslation_degree_school_degree.py  0007_alter_school_degree.py
portfolio/university/tests/: factories.py
portfolio/university/tests/unit_tests/: test_models.py
portfolio/university/tests/unit_tests/test_api/: test_views.py
portfolio/utils/: drf.py  factories.py  functions.py  models.py
portfolio/utils/tests/unit_tests/: test_functions.py  test_models.py
portfolio/vex/: admin.py  apps.py  choices.py  models.py  urls.py
portfolio/vex/actions/: inject_documents.py
portfolio/vex/ai/: history.py  rag.py  vector.py
portfolio/vex/ai/database/: relational.py  vector.py
portfolio/vex/api/: filters.py  serializers.py  sse.py  views.py
portfolio/vex/migrations/: 0001_initial.py  0002_initial.py  0003_document_alter_conversation_options_and_more.py  0004_remove_document_is_active_document_injected.py  0005_remove_conversation_title.py  0006_document_language.py  0007_configuration_configurationtranslation.py
portfolio/vex/tests/: factories.py
portfolio/vex/tests/unit_tests/: test_models.py
portfolio/vex/tests/unit_tests/test_actions/: test_inject_documents.py
portfolio/vex/tests/unit_tests/test_ai/: test_history.py
portfolio/vex/tests/unit_tests/test_ai/test_database/: test_relational.py
portfolio/vex/tests/unit_tests/test_api/: test_sse.py  test_views.py
portfolio/vex/utils/: document_loader.py
portfolio/work/: admin.py  apps.py  choices.py  models.py  urls.py
portfolio/work/api/: serializers.py  views.py
portfolio/work/migrations/: 0001_initial.py  0002_project_projecttranslation.py  0003_experience_experiencetranslation.py  0004_project_image_skill_image_alter_skill_level.py  0005_remove_skill_image_skill_icon.py
portfolio/work/tests/: factories.py
portfolio/work/tests/unit_tests/: test_models.py
portfolio/work/tests/unit_tests/test_api/: test_views.py
tools/chat-tester/: README.md  index.html  script.js  styles.css
